# withings-sync

./: TODO  install.sh  pyproject.toml  requirements.txt  run.py  setup.py
withings_sync/: __init__.py  fit.py  garmin.py  get_logger.py  sync.py  trainerroad.py  withings2.py
